fix: 更新冷视TV资源配置名称

--- a/config.json
+++ b/config.json
@@ -368,7 +368,7 @@
       "api": "https://www.xxibaozyw.com/api.php/provide/vod",
       "name": "细胞采集黄色"
     },
-    "冷视tv普": {
+    "csp_AppYsV2": {
       "api": "https://len.tv/api.php/v1.vod",
       "name": "冷视TV(普)",
       "detail": "https://len.tv"
